--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://sc04.alicdn.com/kf/H00038c02d7ce48bca6d6d9573dba0aa8y.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ดูการจราจร</title>
   </head>
